Tema y devuelve a rails 6.0 suavemente

--- a/app/assets/stylesheets/personaliza.css
+++ b/app/assets/stylesheets/personaliza.css
@@ -17,7 +17,7 @@
   border-radius: 4px 4px 0 0;
   line-height: 1.42857143;
   margin-right: 2px;
-  background-color: rgb(189, 215, 75);
+  background-color: #ffffa9;
   border: 1px solid #eee;
 }
 
