--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           sivel2_gen.conteos_victimizaciones_path,
           desplegable: true %>
       <% end %>
-      <%= despliega_abajo 'Actividades y Proyectos' do %>
+      <%= despliega_abajo 'Actividades IAP' do %>
         <%= opcion_menu 'Listado de Actividades', cor1440_gen.actividades_path,
           desplegable: true %>
         <%= opcion_menu 'Listado de Proyectos', 
@@ -40,15 +40,18 @@
         <%= opcion_menu 'Medición de indicadores', 
           cor1440_gen.mindicadorespf_path, desplegable: true %>
       <% end %>
-      <%= despliega_abajo 'ZRC' do %>
-        <%= opcion_menu 'Nodos', main_app.admin_nodos_path,
+      <%= despliega_abajo 'Acompañados' do %>
+        <%= opcion_menu 'Organizaciones', sip.actoressociales_path,
           desplegable: true %>
         <%= opcion_menu 'ZRC', main_app.zrcs_path,
           desplegable: true %>
-        <%= opcion_menu 'Organizaciones', sip.actoressociales_path,
-          desplegable: true %>
-        <%= opcion_menu 'Participantes', 
+        <%= opcion_menu 'Personas', 
           sip.personas_path, desplegable: true %>
+      <% end %>
+      <%= despliega_abajo 'Contextos' do %>
+         <%= opcion_menu 'Listado', sip.actoressociales_path,
+          desplegable: true %>
+ 
       <% end %>
     <% end %>
   <% end %>
