Menu y opciones tablas basicas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           sivel2_gen.conteos_victimizaciones_path,
           desplegable: true %>
       <% end %>
-      <%= despliega_abajo 'Actividades IAP' do %>
+      <%= despliega_abajo 'Acciones IAP' do %>
         <%= opcion_menu 'Listado de Actividades', cor1440_gen.actividades_path,
           desplegable: true %>
         <%= opcion_menu 'Listado de Proyectos', 
