--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,9 @@
           cor1440_gen.mindicadorespf_path, desplegable: true %>
       <% end %>
       <%= despliega_abajo 'Organizaciones' do %>
-        <%= opcion_menu 'Acciones de organizaciones', sip.actoressociales_path,
+        <%= opcion_menu 'Acciones de organizaciones', sip.orgsociales_path,
           desplegable: true %>
-        <%= opcion_menu 'Organizaciones', sip.actoressociales_path,
+        <%= opcion_menu 'Organizaciones', sip.orgsociales_path,
           desplegable: true %>
         <%= opcion_menu 'Personas', 
           sip.personas_path, desplegable: true %>
@@ -53,7 +53,7 @@
           desplegable: true %>
       <% end %>
       <%= despliega_abajo 'Contextos' do %>
-         <%= opcion_menu 'Listado', sip.actoressociales_path,
+         <%= opcion_menu 'Listado', sip.orgsociales_path,
           desplegable: true %>
  
       <% end %>
