Renombra actorsocial por campo y contexto

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,22 +40,21 @@
         <%= opcion_menu 'Medición de indicadores', 
           cor1440_gen.mindicadorespf_path, desplegable: true %>
       <% end %>
-      <%= despliega_abajo 'Organizaciones' do %>
+      <%= despliega_abajo 'Organizaciones acompañadas' do %>
         <%= opcion_menu 'Acciones de organizaciones', sip.orgsociales_path,
           desplegable: true %>
-        <%= opcion_menu 'Organizaciones', sip.orgsociales_path,
-          desplegable: true %>
-        <%= opcion_menu 'Personas', 
-          sip.personas_path, desplegable: true %>
         <%= opcion_menu 'ZRC', main_app.zrcs_path,
+          desplegable: true %>
+        <%= opcion_menu 'Contactos y/o víctimas', 
+          sip.personas_path, desplegable: true %>
+      <% end %>
+      <%= despliega_abajo 'Contextos' do %>
+         <%= opcion_menu 'Listado', main_app.contextos_path,
           desplegable: true %>
         <%= opcion_menu 'Regiones', sivel2_gen.admin_regiones_path,
           desplegable: true %>
-      <% end %>
-      <%= despliega_abajo 'Contextos' do %>
-         <%= opcion_menu 'Listado', sip.orgsociales_path,
+        <%= opcion_menu 'Organizaciones sociales', sip.orgsociales_path,
           desplegable: true %>
- 
       <% end %>
     <% end %>
   <% end %>
