--- a/app/views/cor1440_gen/actividades/_ubicacion.html.erb
+++ b/app/views/cor1440_gen/actividades/_ubicacion.html.erb
@@ -1,3 +1,30 @@
 
-<%= render partial: 'sip/modelos/sip_campo_aut',
-  locals: {f: f, atr: 'lugar'} %>
+<% htmlid = f.object && f.object.id ? f.object.id : 0 %>
+<%= render partial: 'sip/ubicacionespre/cuatro_filas', locals: {
+  f: f,
+  htmlid: "ubicacionpre-#{htmlid}",
+  estilogen: 'display: block',
+  campofecha: nil,
+  campofecha_etiqueta: nil,
+  campopais: :ubicacionpre_pais,
+  campopais_etiqueta: 'País',
+  campodepartamento: :ubicacionpre_departamento,
+  campodepartamento_etiqueta: 'Departamento',
+  campomunicipio: :ubicacionpre_municipio,
+  campomunicipio_etiqueta: 'Municipio',
+  idresto: 'restoubicacionpre',
+  campocentropoblado: :ubicacionpre_clase,
+  campocentropoblado_etiqueta: 'Centro poblado',
+  campolugar: :ubicacionpre_lugar,
+  campolugar_etiqueta: 'Barrio o vereda',
+  campoubicacionpre_id: :ubicacionpre_id,
+  campositio: :ubicacionpre_sitio,
+  campositio_etiqueta: 'Dirección o finca',
+  campotsitio: :ubicacionpre_tsitio,
+  campotsitio_etiqueta: 'Tipo de sitio',
+  campolatitud: :ubicacionpre_latitud,
+  campolatitud_etiqueta: 'Latitud',
+  campolongitud: :ubicacionpre_longitud,
+  campolongitud_etiqueta: 'Longitud'
+} %>
+
