Mejora cambio de nombre a MIVIAP tambien en URL

--- a/app/views/sip/hogar/index.html.erb
+++ b/app/views/sip/hogar/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 <article>
 <br>
-<center><img src="/iap/si/images/logo.jpg" class="img-responsive"></img></center>
+<center><img src="<%= Rails.configuration.relative_url_root %>/images/logo.jpg" class="img-responsive"></img></center>
 
 <%= render "local" %>
 </article>
