Refactoriza control de ubicacionpre y se usa en pestaña Ubicación de acción. Closes #22

--- a/app/views/cor1440_gen/actividades/_ubicacion.html.erb
+++ b/app/views/cor1440_gen/actividades/_ubicacion.html.erb
@@ -22,9 +22,9 @@
   campositio_etiqueta: 'Dirección o finca',
   campotsitio: :ubicacionpre_tsitio,
   campotsitio_etiqueta: 'Tipo de sitio',
-  campolatitud: :ubicacionpre_latitud,
+  campolatitud: :ubicacionpre_latitud_localizado,
   campolatitud_etiqueta: 'Latitud',
-  campolongitud: :ubicacionpre_longitud,
+  campolongitud: :ubicacionpre_longitud_localizado,
   campolongitud_etiqueta: 'Longitud'
 } %>
 
