Grado impacto. Closes #25

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         <%= opcion_menu 'Medición de indicadores', 
           cor1440_gen.mindicadorespf_path, desplegable: true %>
       <% end %>
-      <%= despliega_abajo 'Contexto y Organizaciones' do %>
+      <%= despliega_abajo 'Contexto' do %>
         <%= opcion_menu 'Organizaciones acompañadas', '#',
           desplegable: true %>
         <%= opcion_menu 'Acciones de organizaciones acompañadas', 
