--- a/app/views/cor1440_gen/actividades/_evaluacion.html.erb
+++ b/app/views/cor1440_gen/actividades/_evaluacion.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'sip/modelos/sip_campo_aut',
+  locals: {f: f, atr: :gradoimpacto} %>
 
 <%= render partial: 'sip/modelos/sip_campo_aut',
   locals: {f: f, atr: :observaciones} %>
