--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
         <%= opcion_menu 'Organizaciones acompañadas', 
           "#{sip.orgsociales_path}?filtro[bustipoorg_id]=1",
           desplegable: true %>
-        <%= opcion_menu 'Acciones de organizaciones acompañadas', 
+        <%= opcion_menu 'Acciones de organizaciones', 
           main_app.accionesorg_path, desplegable: true %>
         <%= opcion_menu 'Organizaciones (no acompañadas)',
           "#{sip.orgsociales_path}?filtro[bustipoorg_id]=2",
