--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
   <% end %>
   <%= grupo_menus :pull => :right do %>
     <%= despliega_abajo 'Documentos' do %>
-      <%= opcion_menu 'Manual', 'https://docs.google.com/document/d/1fpwDBcbjAj0faDA0IREYTbQj2BnPivkViGEuFELkwGk/edit?usp=sharing://docs.google.com/document/d/1VnKbtnujb-ukuNJBEmSswxKZYRkvH1W2OnkA8Ta755w/edit#',
+      <%= opcion_menu 'Manual', 'https://docs.google.com/document/d/1VnKbtnujb-ukuNJBEmSswxKZYRkvH1W2OnkA8Ta755w/edit?usp=sharing',
         target: '_blank',
         desplegable: true %>
       <%= opcion_menu 'Nube', heb412_gen.sisini_path,
