--- a/app/views/cor1440_gen/actividades/_form.html.erb
+++ b/app/views/cor1440_gen/actividades/_form.html.erb
@@ -50,7 +50,8 @@
         <input class='bitacora_cambio' id='actividad_bictacora_cambio' 
                name='actividad[bitacora_cambio]' type='hidden'>
       <% end %>
-      <%= f.button :submit, 'Validar y Guardar', :class => 'btn-primary' %>
+      <%= f.button :submit, 'Validar y Guardar', :class => 'btn-primary',
+        'data-turbo' => false %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
         actividades_path, :class => 'btn' 
       %>
