--- a/app/views/sip/orgsociales/_index_filtro_controles.html.erb
+++ b/app/views/sip/orgsociales/_index_filtro_controles.html.erb
@@ -9,5 +9,6 @@
   name: 'filtrar',
   value: "Filtrar", 
   class: 'envia_filtrar btn-primary',
-  "data-disable-with": 'Filtrar'
+  "data-disable-with" => 'Filtrar',
+  'data-turbo' => false
 %>
