--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -131,10 +131,12 @@
 <% end %>
 
 <% content_for :piedepagina do %>
-  Datos de <a href='https://www.actionpeace.org/'>IAP</a><br>
+  <p> Datos de <a href='https://www.actionpeace.org/'>IAP</a><br>
+  <span class='derechos'>
   Sistema de información con fuentes de 
-  <a href='https://github.com/pasosdeJesus/si_iap/'>código abierto</a> 
-  desarrollado por <a href='http://www.pasosdeJesus.org' target='_blank'>Pasos de Jesús</a>. 2021. 
+  <a href='https://github.com/pasosdeJesus/si_iap/'>código abierto</a>.
+  <br/>
+  Desarrollado por <a id='pasosdeJesus' href="http://www.pasosdeJesus.org" target="_blank">Pasos de Jesús</a>. 2022. 
   </span></p>
 <% end %>
 
