--- a/app/views/contextos/_campo_listadoorgcivil.html.erb
+++ b/app/views/contextos/_campo_listadoorgcivil.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div class='enctabla'>
-  <%= ::Contexto.human_attribute_name(:listadociviles) %>
+  <%= ::Contexto.human_attribute_name(:listadoorgcivil) %>
 </div>
 <div class="overflow-auto" style='height: 8em'>
   <%= render partial: 'tabla_orgsocial', 
