--- a/app/views/coyonturasregionales/_campo_listadoorgna.html.erb
+++ b/app/views/coyonturasregionales/_campo_listadoorgna.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div class='enctabla'>
-  <%= ::Contexto.human_attribute_name(:listadoorgna) %>
+  <%= ::Coyonturaregional.human_attribute_name(:listadoorgna) %>
 </div>
 <div class="overflow-auto" style='height: 8em'>
   <%= render partial: 'tabla_orgsocial', 
