--- a/app/views/coyonturasregionales/_campo_listadoacciones.html.erb
+++ b/app/views/coyonturasregionales/_campo_listadoacciones.html.erb
@@ -3,10 +3,10 @@
 <% end %>
 
 <div class='enctabla'>
-  <%= ::Contexto.human_attribute_name(:listadoaccioneso) %>
+  <%= ::Coyonturaregional.human_attribute_name(:listadoacciones) %>
 </div>
 <div class="overflow-auto" style='height: 8em'>
-  <%= render partial: 'tabla_accioneso', 
+  <%= render partial: 'tabla_acciones', 
     locals: {registro: registro}
   %>
 </div>
