--- a/app/views/coyonturasregionales/_campo_listadoorg.html.erb
+++ b/app/views/coyonturasregionales/_campo_listadoorg.html.erb
@@ -3,9 +3,9 @@
 <% end %>
 
 <div class='enctabla'>
-  <%= ::Contexto.human_attribute_name(:listadoorgcivil) %>
+  <%= ::Coyonturaregional.human_attribute_name(:listadoorg) %>
 </div>
 <div class="overflow-auto" style='height: 8em'>
   <%= render partial: 'tabla_orgsocial', 
-    locals: {registro: registro, tipoorg: Sip::Tipoorg::ORGCIVIL} %>
+    locals: {registro: registro, tipoorg: Sip::Tipoorg::ORGACOMP} %>
 </div>
