no falla cuando ha de presentar todas las org

--- a/app/views/sip/orgsociales/_index_filtro_controles.html.erb
+++ b/app/views/sip/orgsociales/_index_filtro_controles.html.erb
@@ -1,7 +1,7 @@
 <%= f.input :bustipoorg_id, 
   as: :hidden,
   input_html: {
-    value: params[:filtro][:bustipoorg_id] ? 
+    value: params && params[:filtro] && params[:filtro][:bustipoorg_id] ? 
       params[:filtro][:bustipoorg_id] : nil
   } 
 %>
