--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -133,7 +133,7 @@
 <% content_for :piedepagina do %>
   <p> Datos de <a href='https://www.actionpeace.org/'>IAP</a><br>
   <span class='derechos'>
-  Sistema de información con fuentes de 
+  Sistema de información de 
   <a href='https://github.com/pasosdeJesus/si_iap/'>código abierto</a>.
   <br/>
   Desarrollado por <a id='pasosdeJesus' href="http://www.pasosdeJesus.org" target="_blank">Pasos de Jesús</a>. 2022. 
